--- a/index.html
+++ b/index.html
@@ -128,14 +128,16 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">April 17, 2024</span>
-										<h2><a href="#">Power BI Project?<br /></a></h2>
+										<span class="date">June 7, 2024</span>
+										<h2><a href="https://app.powerbi.com/view?r=eyJrIjoiMDE5OTY1ZTktODE4MC00MjI0LWI4MjItYzUwMGRiNzAwZTNmIiwidCI6IjczYmQwMDllLWY0ZDEtNDkxOC1iZTlkLTllYmYxY2FjNWViNyJ9" target="_blank">Data Proffesional Survey<br />
+										Power BI</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>This project could be a reactive website or dashboard that utilizes API data, ,<br/>
-										Not started yet</p>
+									<a href="https://app.powerbi.com/view?r=eyJrIjoiMDE5OTY1ZTktODE4MC00MjI0LWI4MjItYzUwMGRiNzAwZTNmIiwidCI6IjczYmQwMDllLWY0ZDEtNDkxOC1iZTlkLTllYmYxY2FjNWViNyJ9" class="image fit" target="_blank"><img src="images/Data_Proffesional2.jpg" alt="" /></a>
+									<p>A survey was conducted to gather information about the roles and salaries of various proffesionals
+										in the data field, this was then analyzed using Power BI to understand the job satisfaction 
+										salary differences across the data field globally<br/></p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="https://app.powerbi.com/view?r=eyJrIjoiMDE5OTY1ZTktODE4MC00MjI0LWI4MjItYzUwMGRiNzAwZTNmIiwidCI6IjczYmQwMDllLWY0ZDEtNDkxOC1iZTlkLTllYmYxY2FjNWViNyJ9" class="button" target="_blank">View Project</a></li>
 									</ul>
 								</article>
 							</section>
