--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 									</header>
 									<a href="https://app.powerbi.com/view?r=eyJrIjoiMDE5OTY1ZTktODE4MC00MjI0LWI4MjItYzUwMGRiNzAwZTNmIiwidCI6IjczYmQwMDllLWY0ZDEtNDkxOC1iZTlkLTllYmYxY2FjNWViNyJ9" class="image fit" target="_blank"><img src="images/Data_Proffesional2.jpg" alt="" /></a>
 									<p>A survey was conducted to gather information about the roles and salaries of various proffesionals
-										in the data field, this was then analyzed using Power BI to understand the job satisfaction 
+										in the data field, this was then analyzed using Power BI to understand the job satisfaction and
 										salary differences across the data field globally<br/></p>
 									<ul class="actions special">
 										<li><a href="https://app.powerbi.com/view?r=eyJrIjoiMDE5OTY1ZTktODE4MC00MjI0LWI4MjItYzUwMGRiNzAwZTNmIiwidCI6IjczYmQwMDllLWY0ZDEtNDkxOC1iZTlkLTllYmYxY2FjNWViNyJ9" class="button" target="_blank">View Project</a></li>
